2010-1-11 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-02
    * R/bayesglm: new bayesglm.fit (written by Daniel Lee)


2010-1-8 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-01.
    * R/bayesglm: a bug in x.matrix augmentation


2009-12-30 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-13.
    * R/bayesglm: smarter use of x matrix to save memory usage


2009-12-12 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-12.
    * R/simmer: use of sparse matrix in sim.mer

2009-12-08 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-11; add abind pacakge dependencyR 
    * R/simmer: new sim functions for "mer" class

2009-11-22 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-10.
    * NAMESPACE: export logit

2009-4-29 Yu-Sung Su     <ys463@columbia.edu>  
    * R/display: fix format inconsistency in sprintf (fround)

2009-4-13 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-9.
    * R/macthing: fix a bug in matching replace=TRUE


2009-3-31 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-8.
    * R/display: add option detail


2009-3-1 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-7.
    * R/display: fix a bug in display.mer


2009-2-26 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-6.
    * R/display: print out t-value, z-value, p-value

2009-2-20 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-5.
    * R/load.first: no longer set default digit=2

2009-2-17 Yu-Sung Su     <ys463@columbia.edu>  
    * NAMESPACE: export binned.resids


2009-2-4 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-4, no longer need car
    * R/load.first: car is no longer required

2009-2-1 Yu-Sung Su     <ys463@columbia.edu>  