@@ -1,3 +1,7 @@
+2010-1-15 Yu-Sung Su     <ys463@columbia.edu>  
+    * DESCRIPTION (Version, Date): 1.3-03
+    * R/balanceplot: fix a bug in balance(), take out the intercept
+
 2010-1-11 Yu-Sung Su     <ys463@columbia.edu>  
     * DESCRIPTION (Version, Date): 1.3-02
     * R/bayesglm: new bayesglm.fit (written by Daniel Lee)
